--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -2009,7 +2009,7 @@ button {
   border: 1px solid #eee8d5;
 }
 .dev:before {
-  background: url('../images/landing/harsh.png?1360620499') no-repeat scroll center top;
+  background: url('../images/landing/harsh.png?1351725897') no-repeat scroll center top;
   -webkit-background-size: contain;
   -moz-background-size: contain;
   -o-background-size: contain;
@@ -2070,19 +2070,19 @@ button {
 }
 
 #peter:before {
-  background-image: url('../images/landing/peter.png?1360620499');
+  background-image: url('../images/landing/peter.png?1351725897');
 }
 
 #carl:before {
-  background-image: url('../images/landing/carl.png?1360620499');
+  background-image: url('../images/landing/carl.png?1351725897');
 }
 
 #eric:before {
-  background-image: url('../images/landing/eric.png?1360620499');
+  background-image: url('../images/landing/eric.png?1351725897');
 }
 
 #jonny:before {
-  background-image: url('../images/landing/jonny.png?1360620499');
+  background-image: url('../images/landing/jonny.png?1351725897');
 }
 
 @-moz-keyframes announce-in {
@@ -2422,10 +2422,10 @@ button {
   margin-right: .4em;
 }
 .country_code-field [value="ca"] + .radio-type:before {
-  background-image: url('../images/flags/ca.png?1360620499');
+  background-image: url('../images/flags/ca.png?1359567924');
 }
 .country_code-field [value="us"] + .radio-type:before {
-  background-image: url('../images/flags/us.png?1360620499');
+  background-image: url('../images/flags/us.png?1359567924');
 }
 
 .school-field {
@@ -2984,7 +2984,7 @@ input:focus ~ .formfield-help .sms-preview, .changed .formfield-help .sms-previe
   height: 0;
   padding-top: 53.61552%;
   width: 30.15873%;
-  background: url('../images/phone.png?1360620499') no-repeat center;
+  background: url('../images/phone.png?1353558228') no-repeat center;
   -webkit-background-size: contain;
   -moz-background-size: contain;
   -o-background-size: contain;
@@ -3566,6 +3566,8 @@ input:focus ~ .formfield-help .sms-preview, .changed .formfield-help .sms-previe
   float: right;
   width: 68.08511%;
   margin-left: -1.27778rem;
+  margin-bottom: 12px;
+  margin-bottom: 0.63889rem;
 }
 
 .dashboard li {
